--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,11 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <% flash.each do | key, value | %>
+    <%= content_tag(:div, class: ['alert', "alert-#{key}"]) do %>
+      <%= value %>
+    <% end %>
+  <% end %>
 
 <%= yield %>
 
